--- a/style.css
+++ b/style.css
@@ -292,7 +292,7 @@ a:hover,.s2-d2 a:hover,figcaption a:hover{
 	text-align: center;
 	position: relative;
 	color: white;
-	background-image: url("file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/10.jpg");
+	background-image: url("https://res.cloudinary.com/hamskid/image/upload/v1595201436/second-repo/10_o6hddg.JPG");
 	background-attachment: fixed;
 
 }
