--- a/style.css
+++ b/style.css
@@ -159,6 +159,7 @@ a:hover,.s2-d2 a:hover,figcaption a:hover{
 .s2-d-d1-d2{
 	justify-content: space-around;
 	margin-top:2%;
+	align-items: center;
 	display: flex;
 	flex-direction: row;
 }
