--- a/style.css
+++ b/style.css
@@ -174,10 +174,13 @@ a:hover,.s2-d2 a:hover,figcaption a:hover{
 }
 .s2-d{
 	padding-top: 3%;
-	justify-content:center;
+	justify-content:space-around;
 	display: flex;
 	flex-direction: row;
 }
+.section2{
+	display: flex;
+	justify-content:center;
 .s2-d-d2{
 	flex-direction: column;
 	display: flex;
