--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ a:hover,.s2-d2 a:hover,figcaption a:hover{
 }
 .s2-d{
 	padding-top: 3%;
+	padding-left:0%;
 	justify-content:space-around;
 	display: flex;
 	flex-direction: row;
@@ -184,7 +185,7 @@ a:hover,.s2-d2 a:hover,figcaption a:hover{
 	display: flex;
 	justify-content:center;
 	border:2px solid red;
-	margin: 0 auto;
+
 	width:100%;
 	
 }
