--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ a:hover,.s2-d2 a:hover,figcaption a:hover{
 .s2-d{
 	padding-top: 3%;
 	
-	justify-content:space-around;
+	justify-content:center;
 	display: flex;
 	flex-direction: row;
 	margin-left: 0%;
